pocket clean and data analysis

--- a/pocket/pocket_downloader.ipynb
+++ b/pocket/pocket_downloader.ipynb
@@ -11,11 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Want to know how many articles you've read and have to read in Pocket? \n",
     "\n",
     "This code provides setup and authorization to Pocket's API. We then pull your read and unread articles and export them to CSV. \n",
     "\n",
-    "For more info and additional configuration, See [Pocket API Documentation](https://getpocket.com/developer/docs/overview)"
+    "For more info and additional configuration, See [Pocket API Documentation](https://getpocket.com/developer/docs/overview)."
    ]
   },
   {
@@ -49,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Option 2 (More Secure since not stored in notebook): \n",
     "# Copy sample-credentials.json, create credentials \n",
+    "\n",
     "# Uncomment lines below and add code after each step\n",
     "# Copy your keys here after each step\n",
     "\n",
@@ -84,11 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 2\n",
+    "\n",
+    "# Uncomment lines below and add code after each step\n",
+    "# Copy and update your keys after each step\n",
     "\n",
     "# import requests\n",
     "# pocket_api = requests.post('https://getpocket.com/v3/oauth/request', \n",
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +120,20 @@
     "\n",
     "# After modify URL to add your code and visit: \n",
     "# Visit: https://getpocket.com/auth/authorize?request_token=[Your-Request-Code]&redirect_uri=https://google.com\n",
+    "\n",
     "# Copy your request code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4: \n",
+    "# Step 4:\n",
+    "\n",
+    "# Uncomment lines below and add code after each step\n",
+    "# Copy and update your keys after each step\n",
     "\n",
     "#import requests\n",
     "#pocket_auth = requests.post('https://getpocket.com/v3/oauth/authorize', \n",
@@ -145,18 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pocket import Pocket, PocketException\n",
     "import json\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,12 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup Pocket Object\n",
-    "\n",
     "p = Pocket(\n",
     " consumer_key=CONSUMERKEY,\n",
     " access_token=ACCESSTOKEN\n",
@@ -187,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,16 +215,27 @@
     "lis = p.get(state=\"unread\", count=5000)\n",
     "articles_dict.update(lis[0]['list'])\n",
     "\n",
-    "unread_articles = pd.DataFrame.from_dict(articles_dict, orient='index')\n",
-    "\n",
-    "unread_articles['time_added'] = pd.to_datetime(unread_articles['time_added'], unit='s')\n",
-    "unread_articles['time_updated'] = pd.to_datetime(unread_articles['time_updated'], unit='s')\n",
-    "# unread_articles['time_read'] = pd.to_datetime(unread_articles['time_read'], unit='s')"
+    "unread_articles = pd.DataFrame.from_dict(articles_dict, orient='index')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert unix time to datetime\n",
+    "unread_articles['time_added'] = pd.to_datetime(unread_articles['time_added'], unit='s')\n",
+    "unread_articles['time_updated'] = pd.to_datetime(unread_articles['time_updated'], unit='s')\n",
+    "\n",
+    "# replace zeros with nan\n",
+    "unread_articles.loc[unread_articles['time_favorited'] == '0','time_favorited'] = np.nan\n",
+    "unread_articles['time_favorited'] = pd.to_datetime(unread_articles['time_favorited'], unit='s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +244,7 @@
        "477"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,12 +257,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export to csv\n",
-    "unread_articles.to_csv('data/pocket_unread_articles.csv')"
+    "unread_articles.to_csv('data/pocket_unread_articles.csv', index=False)"
    ]
   },
   {
@@ -255,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,9 +299,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting first 1000 read articles in Pocket...\n",
+      "Getting an additional 1000 read articles...\n",
+      "Getting an additional 1000 read articles...\n",
+      "Getting an additional 1000 read articles...\n",
+      "Getting an additional 1000 read articles...\n",
+      "Getting an additional 1000 read articles...\n",
+      "Getting an additional 1000 read articles...\n",
+      "Getting an additional 1000 read articles...\n",
+      "Completed. No More Read Articles to pull.\n"
+     ]
+    }
+   ],
    "source": [
     "# Retrieve all readings since oldest date\n",
     "\n",
@@ -283,49 +325,57 @@
     "more_articles = True\n",
     "offset = 0\n",
     "\n",
-    "# Get initial 5000 articles \n",
-    "lis = p.get(since=oldest_date, state=\"archive\", count=5000, sort='oldest')\n",
+    "# Get initial 1000 articles \n",
+    "print(\"Getting first 1000 read articles in Pocket...\")\n",
+    "lis = p.get(since=oldest_date, state=\"archive\", count=1000, sort='oldest')\n",
     "articles_dict.update(lis[0]['list'])\n",
     "\n",
-    "# Loop\n",
+    "# Let's Loop through additional pocket articles\n",
     "while more_articles == True:\n",
     "    if lis[0]['list'] == []:\n",
+    "        print(\"Completed. No More Read Articles to pull.\")\n",
     "        more_articles = False\n",
+    "        break\n",
     "    else:\n",
-    "        offset = offset + 5000\n",
-    "        lis = p.get(since=oldest_date, state=\"archive\", count=5000, sort='oldest', offset=offset)\n",
-    "        articles_dict.update(lis[0]['list'])"
+    "        offset = offset + 1000\n",
+    "        print(\"Getting an additional 1000 read articles...\")\n",
+    "        lis = p.get(since=oldest_date, state=\"archive\", count=1000, sort='oldest', offset=offset)\n",
+    "        articles_dict.update(lis[0]['list'])\n",
+    "\n",
+    "# create dataframe\n",
+    "read_articles = pd.DataFrame.from_dict(articles_dict, orient='index')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create dataframe\n",
-    "read_articles = pd.DataFrame.from_dict(articles_dict, orient='index')\n",
-    "\n",
+    "# read_articles.columns\n",
+    "# read_articles.info()\n",
+    "# read_articles.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# convert unix time to datetime\n",
     "read_articles['time_added'] = pd.to_datetime(read_articles['time_added'], unit='s')\n",
     "read_articles['time_updated'] = pd.to_datetime(read_articles['time_updated'], unit='s')\n",
+    "\n",
+    "# replace zeros with nan\n",
+    "read_articles.loc[read_articles['time_favorited'] == '0','time_favorited'] = np.nan\n",
     "read_articles['time_favorited'] = pd.to_datetime(read_articles['time_favorited'], unit='s')\n",
     "read_articles['time_read'] = pd.to_datetime(read_articles['time_read'], unit='s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read_articles.columns\n",
-    "# read_articles.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -334,25 +384,41 @@
        "6080"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# total read\n",
-    "len(articles_dict)"
+    "# total  articles read\n",
+    "len(read_articles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read Articles Exported to CSV\n"
+     ]
+    }
+   ],
    "source": [
     "# save to csv\n",
-    "read_articles.to_csv(\"data/pocket_read_articles.csv\")"
+    "read_articles.to_csv(\"data/pocket_read_articles.csv\", index=False, encoding='utf-8')\n",
+    "print(\"Read Articles Exported to CSV\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
