data analysis of instapaper articles and highlights

--- a/instapaper/instapaper_downloader.ipynb
+++ b/instapaper/instapaper_downloader.ipynb
@@ -22,6 +22,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Requirements:\n",
+    "\n",
+    "* Pandas. Install with command: `$ pip install pandas`\n",
+    "* [PyInstapaper](https://github.com/mdorn/pyinstapaper): Install with command: `$ pip install pyinstapaper`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dependencies\n",
+    "import pandas as pd\n",
+    "from pyinstapaper.instapaper import Instapaper, Folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Instapaper Developer Setup and Authentification"
    ]
   },
@@ -29,11 +57,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: Once you get your app approved by Instapaper, this actual setup may take several minutes. \n",
+    "Note: Once you get your app approved by Instapaper, this actual setup should only take a few minutes. \n",
     "\n",
     "### Step 1: Request Developer Access \n",
     "\n",
-    "Create an app and request Oauth Consumer token on Instapaper's Developer API: https://www.instapaper.com/main/request_oauth_consumer_token. NOTE: This may take a day or more depending on human review. \n",
+    "* Create an app and request Oauth Consumer token on Instapaper's Developer API: https://www.instapaper.com/main/request_oauth_consumer_token. \n",
+    "* NOTE: This may take a day or more depending on human review. \n",
     "\n",
     "### Step 2: Add Credentials to credentials.json\n",
     "\n",
@@ -44,11 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get stored credentials\n",
+    "import json\n",
+    "\n",
     "with open(\"credentials.json\", \"r\") as file:\n",
     "   credentials = json.load(file)\n",
     "   instapaper_cr = credentials['instapaper']\n",
@@ -60,13 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# api login \n",
-    "from pyinstapaper.instapaper import Instapaper, Folder\n",
-    "\n",
     "instapaper = Instapaper(CONSUMERID, CONSUMERSECRET)\n",
     "instapaper.login(INSTAPAPER_LOGIN, INSTAPAPER_PASSWORD)"
    ]
@@ -87,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,8 +183,7 @@
      "output_type": "stream",
      "text": [
       "Getting read bookmarks from Instapaper\n",
-      "500 read articles in Instapaper\n",
-      "Exported to CSV\n"
+      "Exported 500 read articles from Instapaper\n"
      ]
     }
    ],
@@ -174,7 +202,7 @@
     "        'time': i.time,\n",
     "        'progress': i.progress,\n",
     "        'starred': i.starred,\n",
-    "        'type': i.type,\n",
+    "        'type': i.type, \n",
     "        'private_source': i.private_source,\n",
     "        'read_status': 'read'\n",
     "    }\n",
@@ -202,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +268,7 @@
     "        highlights_list.append(highlight_dict)\n",
     "\n",
     "higlights_df = pd.DataFrame(highlights_list)\n",
-    "higlights_df.to_csv(\"data/instapaper_higlights.csv\", index=False)\n",
+    "higlights_df.to_csv(\"data/instapaper_highlights.csv\", index=False)\n",
     "print(\"Exported {} Highlights from Instapaper\".format(len(higlights_df)))"
    ]
   },
