google calendar simple data analysis

--- a/google_calendar/google_calendar_downloader.ipynb
+++ b/google_calendar/google_calendar_downloader.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Download all of your google calendar events history and export into csv. \n",
+    "* For simple data analysis and visualization, see: [google_calendar_data_analysis](https://github.com/markwk/qs_ledger/tree/master/google_calendar/google_calendar_data_analysis.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "----"
    ]
   },
@@ -178,19 +186,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting the upcoming 10 events\n",
+      "2018-12-29T09:30:00+07:00 Writing\n",
+      "2018-12-29T09:30:00+07:00 Free Reading \n",
+      "2018-12-29T11:00:00+07:00 Meditate\n",
+      "2018-12-29T14:45:00+07:00 Design Hour\n",
+      "2018-12-29T16:45:00+07:00 Int3c Business Check-in & Biz Dev\n",
+      "2018-12-29T20:15:00+07:00 Date with Data HOUR\n",
+      "2018-12-30T10:00:00+07:00 Weekly Review\n",
+      "2018-12-30T11:30:00+07:00 Read: Tickler File\n",
+      "2018-12-31T08:30:00+07:00 Writing\n",
+      "2019-01-01T11:30:00+07:00 Monthly Review\n"
+     ]
+    }
+   ],
    "source": [
     "test()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -208,9 +227,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing Calendar Names...\n",
+      "Toggl Time\n",
+      "Articles from Pocket\n",
+      "Tech / Startup Meeetings and Events\n",
+      "Avalability\n",
+      "Fitness Calendar\n",
+      "Todoist\n",
+      "webcal://www.trainingpeaks.com/ical/F2VHISIR72BH4.ics\n",
+      "Personal Calendar\n",
+      "Int3c Web Dev Appointments\n",
+      "Moves Export\n",
+      "Habits\n",
+      "https://app.velohero.com/ical/workouts?private_key=wKBDat9VNOGQlI6CBcyNXtxvMC5q9W1ph5YUMzKG\n",
+      "Family Birthdays\n",
+      "Todoist\n",
+      "SportTracks\n",
+      "Theme Day\n",
+      "Panda Half\n",
+      "Contacts\n",
+      "Holidays in China\n",
+      "Week Numbers\n"
+     ]
+    }
+   ],
    "source": [
     "calendars_list = service.calendarList().list().execute()\n",
     "calendars_dict = calendars_list.get('items', [])\n",
@@ -321,9 +368,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing events for calendar: 9u1e7p4lcnj7mlmfgps9adjj6s@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "1284\n",
+      "Creating CSV at data/9u1e7p4lcnj7mlmfgps9adjj6s@group.calendar.google.com.csv\n",
+      "Printing events for calendar: 4n6mispi9os3t9kd1ec1ednp50@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "1552\n",
+      "Creating CSV at data/4n6mispi9os3t9kd1ec1ednp50@group.calendar.google.com.csv\n",
+      "Printing events for calendar: int3c.com_svrm8irmhghrrbvamgit3q5qf4@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "84\n",
+      "Creating CSV at data/int3c.com_svrm8irmhghrrbvamgit3q5qf4@group.calendar.google.com.csv\n",
+      "Printing events for calendar: n213rt5unu15rdmfibv81sf8ik@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "30\n",
+      "Creating CSV at data/n213rt5unu15rdmfibv81sf8ik@group.calendar.google.com.csv\n",
+      "Printing events for calendar: clckbnn2qm0uiu67b18enbcr40@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "487\n",
+      "Creating CSV at data/clckbnn2qm0uiu67b18enbcr40@group.calendar.google.com.csv\n",
+      "Printing events for calendar: e307tj7d8mkqn7091endn8uc5g@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "2411\n",
+      "Creating CSV at data/e307tj7d8mkqn7091endn8uc5g@group.calendar.google.com.csv\n",
+      "Printing events for calendar: 4lfh4c9usb6b3ph4c7i5p51s0nmojd76@import.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "1\n",
+      "Creating CSV at data/4lfh4c9usb6b3ph4c7i5p51s0nmojd76@import.calendar.google.com.csv\n",
+      "Printing events for calendar: markwkoester@gmail.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "2500\n",
+      "Getting 2 page of events...\n",
+      "374\n",
+      "Creating CSV at data/markwkoester@gmail.com.csv\n",
+      "Printing events for calendar: mark@int3c.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "1026\n",
+      "Creating CSV at data/mark@int3c.com.csv\n",
+      "Printing events for calendar: m84t17s3vb7impjqol753onleo@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "2163\n",
+      "Creating CSV at data/m84t17s3vb7impjqol753onleo@group.calendar.google.com.csv\n",
+      "Printing events for calendar: u51rqv0r4qoa4c2m415rvgs344@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "994\n",
+      "Creating CSV at data/u51rqv0r4qoa4c2m415rvgs344@group.calendar.google.com.csv\n",
+      "Printing events for calendar: ine0pkd4imjq0153l27nfubf4qqf4bcb@import.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "0\n",
+      "Creating CSV at data/ine0pkd4imjq0153l27nfubf4qqf4bcb@import.calendar.google.com.csv\n",
+      "Printing events for calendar: tvg5s9um84prhu84j9tkib3k5o@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "124\n",
+      "Creating CSV at data/tvg5s9um84prhu84j9tkib3k5o@group.calendar.google.com.csv\n",
+      "Printing events for calendar: f96ej5vf7jjt7kdap1k313bjt9fsajfe@import.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "11\n",
+      "Creating CSV at data/f96ej5vf7jjt7kdap1k313bjt9fsajfe@import.calendar.google.com.csv\n",
+      "Printing events for calendar: 8vedrt8bhktem096t6qbdev729v9j068@import.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "0\n",
+      "Creating CSV at data/8vedrt8bhktem096t6qbdev729v9j068@import.calendar.google.com.csv\n",
+      "Printing events for calendar: su5cu3a3qapnmk5797np94e66s@group.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "53\n",
+      "Creating CSV at data/su5cu3a3qapnmk5797np94e66s@group.calendar.google.com.csv\n",
+      "Printing events for calendar: 5on0m472bmksaic4e0517cp4h0jpo03h@import.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "831\n",
+      "Creating CSV at data/5on0m472bmksaic4e0517cp4h0jpo03h@import.calendar.google.com.csv\n",
+      "Printing events for calendar: #contacts@group.v.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "44\n",
+      "Creating CSV at data/#contacts@group.v.calendar.google.com.csv\n",
+      "Printing events for calendar: en.china#holiday@group.v.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "50\n",
+      "Creating CSV at data/en.china#holiday@group.v.calendar.google.com.csv\n",
+      "Printing events for calendar: p#weeknum@group.v.calendar.google.com\n",
+      "Getting all of the past events\n",
+      "Getting 1 page of events...\n",
+      "104\n",
+      "Creating CSV at data/p#weeknum@group.v.calendar.google.com.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# generate csv of all calendars in google calendar\n",
     "for i in calendar_ids:\n",
@@ -333,7 +489,7 @@
     "    filename = str(i) + \".csv\"\n",
     "    filepath = 'data/' + filename\n",
     "    print(\"Creating CSV at \" + filepath)\n",
-    "    event_df.to_csv(filepath)"
+    "    event_df.to_csv(filepath, index=False)"
    ]
   },
   {
