goodreads downloader updates and separate goodreads data analysis notebook for a year in review

--- a/goodreads/goodreads_downloader.ipynb
+++ b/goodreads/goodreads_downloader.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Goodreads Books Read Downloader"
    ]
@@ -13,24 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simple function to download and process User Books from Goodreads.com, especially your read books. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Acknowledgement \n",
+    "Simple Script to download and process User Books from Goodreads.com, especially your read books. \n",
     "\n",
-    "* Still a work in progress. \n",
-    "* This code is heavily indebted to and adopted from https://github.com/nladwa/goodreads-api"
+    "Acknowledgement: This code is heavily indebted to and adopted from https://github.com/nladwa/goodreads-api\n",
+    "\n",
+    "For data analysis of your Good Reads Book Reading History, see: [goodreads_data_analysis.ipynb](https://github.com/markwk/qs_ledger/blob/master/goodreads/goodreads_data_analysis.ipynb). "
    ]
   },
   {
@@ -44,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Authentification"
+    "## Setup and Authentification"
    ]
   },
   {
@@ -75,9 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
@@ -90,19 +73,11 @@
    },
    "outputs": [],
    "source": [
+    "# Dependencies\n",
     "import urllib.parse\n",
     "import xmltodict\n",
-    "from collections import OrderedDict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
     "import numpy as np, string, re, pytz\n",
     "import pandas as pd"
    ]
@@ -123,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -231,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'books_total': 1307, 'user_name': 'markwkoester'}"
+       "{'books_total': 1384, 'user_name': 'markwkoester'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,21 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting 1307 books via API for username \"markwkoester\", be patient!\n",
-      "Books collected = 200/1307\n",
-      "Books collected = 400/1307\n",
-      "Books collected = 600/1307\n",
-      "Books collected = 800/1307\n",
-      "Books collected = 1000/1307\n",
-      "Books collected = 1200/1307\n",
-      "Books collected = 1307/1307\n",
+      "Collecting 1384 books via API for username \"markwkoester\", be patient!\n",
+      "Books collected = 200/1384\n",
+      "Books collected = 400/1384\n",
+      "Books collected = 600/1384\n",
+      "Books collected = 800/1384\n",
+      "Books collected = 1000/1384\n",
+      "Books collected = 1200/1384\n",
+      "Books collected = 1384/1384\n",
       "Book collection complete\n"
      ]
     }
@@ -278,8 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# combine books into df\n",
@@ -293,8 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# more processing and adding additional info\n",
@@ -334,8 +313,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# this data is no longer needed so dropping it\n",
@@ -344,11 +325,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# books.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1384"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# total books\n",
+    "len(books)"
    ]
   },
   {
@@ -357,19 +361,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1307"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "books.csv created\n"
+     ]
     }
    ],
    "source": [
-    "# total books\n",
-    "len(books)"
+    "books.to_csv(\"data/books.csv\", index = False)\n",
+    "print(\"books.csv created\")"
    ]
   },
   {
@@ -388,8 +389,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "books = pd.read_csv(\"data/books.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books['started_at'] = pd.to_datetime(books['started_at'])\n",
+    "books['read_at'] = pd.to_datetime(books['read_at'])\n",
+    "books['date_added'] = pd.to_datetime(books['date_added'])\n",
+    "books['date_updated'] = pd.to_datetime(books['date_updated'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO\n",
@@ -398,25 +422,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# functions to convert UTC to Shanghai time zone and extract date/time elements\n",
-    "#convert_tz = lambda x: x.to_pydatetime().replace(tzinfo=pytz.utc).astimezone(pytz.timezone('Asia/Shanghai'))\n",
-    "#get_year = lambda x: convert_tz(x).year\n",
-    "#get_month = lambda x: '{}-{:02}'.format(convert_tz(x).year, convert_tz(x).month) #inefficient\n",
-    "#get_day = lambda x: convert_tz(x).day\n",
-    "#get_hour = lambda x: convert_tz(x).hour\n",
-    "#get_day_of_week = lambda x: convert_tz(x).weekday()"
+    "convert_tz = lambda x: x.to_pydatetime().replace(tzinfo=pytz.utc).astimezone(pytz.timezone('Asia/Shanghai'))\n",
+    "get_year = lambda x: convert_tz(x).year\n",
+    "get_month = lambda x: '{}-{:02}'.format(convert_tz(x).year, convert_tz(x).month) #inefficient\n",
+    "get_day = lambda x: convert_tz(x).day\n",
+    "get_hour = lambda x: convert_tz(x).hour\n",
+    "get_day_of_week = lambda x: convert_tz(x).weekday()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# parse out date and time elements as Shanghai time\n",
@@ -427,13 +453,6 @@
     "#books['ReadDOW'] = books['read_at'].map(get_day_of_week)\n",
     "# past_tasks = past_tasks.drop(labels=['completed_date'], axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -451,147 +470,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "866"
+       "899"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# total books read\n",
-    "books_read = books[(books.read_count >= 1) & (books.shelves != 'currently-reading')]\n",
+    "books_read = books[(books.read_count >= 1) & (books.shelves != 'currently-reading')].reindex()\n",
     "len(books_read)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rating</th>\n",
-       "      <th>read_count</th>\n",
-       "      <th>num_page</th>\n",
-       "      <th>average_rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>866.000000</td>\n",
-       "      <td>866.000000</td>\n",
-       "      <td>810.000000</td>\n",
-       "      <td>866.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>3.262125</td>\n",
-       "      <td>1.004619</td>\n",
-       "      <td>360.044444</td>\n",
-       "      <td>3.986028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.920831</td>\n",
-       "      <td>0.067845</td>\n",
-       "      <td>244.911281</td>\n",
-       "      <td>0.338544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>217.250000</td>\n",
-       "      <td>3.860000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>320.000000</td>\n",
-       "      <td>4.010000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>432.000000</td>\n",
-       "      <td>4.180000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>4100.000000</td>\n",
-       "      <td>4.740000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           rating  read_count     num_page  average_rating\n",
-       "count  866.000000  866.000000   810.000000      866.000000\n",
-       "mean     3.262125    1.004619   360.044444        3.986028\n",
-       "std      1.920831    0.067845   244.911281        0.338544\n",
-       "min      0.000000    1.000000     2.000000        0.000000\n",
-       "25%      2.000000    1.000000   217.250000        3.860000\n",
-       "50%      4.000000    1.000000   320.000000        4.010000\n",
-       "75%      5.000000    1.000000   432.000000        4.180000\n",
-       "max      5.000000    2.000000  4100.000000        4.740000"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "books_read.describe()"
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Processing Books with Date Read"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "301"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter out books with null read_at date\n",
+    "books_read_with_date = books_read[books_read['read_at'].notnull()].copy().reindex()\n",
+    "books_read_with_date = books_read_with_date.sort_values(by=['read_at'])\n",
+    "len(books_read_with_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# books_read.head()"
+    "# parse out date and time elements as Shanghai time\n",
+    "books_read_with_date['read_at'] = pd.to_datetime(books_read_with_date['read_at'])\n",
+    "books_read_with_date['read_timestamp'] = books_read_with_date['read_at'].map(convert_tz)\n",
+    "books_read_with_date['year'] = books_read_with_date['read_at'].map(get_year)\n",
+    "books_read_with_date['month'] = books_read_with_date['read_at'].map(get_month)\n",
+    "books_read_with_date['day'] = books_read_with_date['read_at'].map(get_day)\n",
+    "books_read_with_date['hour'] = books_read_with_date['read_at'].map(get_hour)\n",
+    "books_read_with_date['mnth_yr'] = books_read_with_date['read_at'].apply(lambda x: x.strftime('%Y-%m')) # note: not very efficient\n",
+    "books_read_with_date['dow'] = books_read_with_date['read_at'].map(get_day_of_week)"
    ]
   },
   {
@@ -610,21 +560,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "books.csv created\n"
+      "books_all_read.csv created\n",
+      "books_read_history.csv created\n"
      ]
     }
    ],
    "source": [
-    "books.to_csv(\"data/books.csv\", index = False)\n",
-    "print(\"books.csv created\")"
+    "books_read.to_csv(\"data/books_all_read.csv\", index = False)\n",
+    "print(\"books_all_read.csv created\")\n",
+    "\n",
+    "books_read_with_date.to_csv(\"data/books_read_history.csv\", index = False)\n",
+    "print(\"books_read_history.csv created\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
