--- a/apple_health/apple_health_data_processor.ipynb
+++ b/apple_health/apple_health_data_processor.ipynb
@@ -59,8 +59,8 @@
    },
    "outputs": [],
    "source": [
-    "# functions to convert UTC to Shanghai time zone and extract date/time elements\n",
-    "convert_tz = lambda x: x.to_pydatetime().replace(tzinfo=pytz.utc).astimezone(pytz.timezone('Asia/Shanghai'))\n",
+    "# functions to convert UTC to CST time zone and extract date/time elements\n",
+    "convert_tz = lambda x: x.to_pydatetime().replace(tzinfo=pytz.utc).astimezone(pytz.timezone('America/Chicago'))\n",
     "get_year = lambda x: convert_tz(x).year\n",
     "get_month = lambda x: '{}-{:02}'.format(convert_tz(x).year, convert_tz(x).month) #inefficient\n",
     "get_date = lambda x: '{}-{:02}-{:02}'.format(convert_tz(x).year, convert_tz(x).month, convert_tz(x).day) #inefficient\n",
