--- a/oura/oura_downloader.ipynb
+++ b/oura/oura_downloader.ipynb
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_date=\"2018-08-01\"\n",
-    "end_date=\"2018-12-31\""
+    "start_date=\"2020-01-01\"\n",
+    "end_date=\"2020-12-31\""
    ]
   },
   {
@@ -88,6 +88,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## OPTION 1: Using Personal Access Token\n",
+    "\n",
+    "This is the recommended appoach if you plan to use only on your own data. \n",
+    "\n",
+    "1. Login to https://cloud.ouraring.com/\n",
+    "2. Visit https://cloud.ouraring.com/personal-access-tokens and generate a personal access token. \n",
+    "3. Copy you access token. \n",
+    "4. Inside the directory, copy the file credentials-sample.json and create credentials.json\n",
+    "5. Open credentials.json in your editor, paste your Oura personal access token into \"ACCESS_TOKEN\" into credentials.json and save the file. NOTE: You can ignore the other options. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OPTION 2: Full API Integration\n",
     "## Setup, Installation, Authentification Steps\n",
     "\n",
     "#### Step 1:\n",
@@ -99,6 +115,7 @@
     "* After saving the form, copy your \"Client ID\" and \"Client Secret\" from your Oura application, \n",
     "* Inside the directory, copy the file credentials-sample.json and create credentials.json\n",
     "* Open credentials.json in your editor, paste your Oura \"Client ID\" and \"Client Secret\" into credentials.json and save the file. \n",
+    "* Be sure to uncomment `%run ./oura_server.py`\n",
     "\n",
     "#### Step 2: \n",
     "\n",
@@ -151,6 +168,7 @@
     "# this script to start server \n",
     "# then visit provided url to complete process, generate token and copy\n",
     "# Comment out once completed\n",
+    "# import flask\n",
     "# %run ./oura_server.py"
    ]
   },
@@ -183,9 +201,24 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 37,\n",
+       " 'weight': 80.0,\n",
+       " 'height': 188,\n",
+       " 'gender': 'male',\n",
+       " 'email': 'markwkoester@gmail.com'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# user_info"
+    "user_info"
    ]
   },
   {
@@ -266,13 +299,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79 days of tracked sleep\n",
-      "7.08 median hours of sleep per night\n",
-      "7.12 average hours of sleep per night\n",
-      "78.9 average sleep score\n",
-      "86.9 average sleep efficiency\n",
-      "53.7 average hr\n",
-      "15.3 average breaths per minute\n"
+      "18 days of tracked sleep\n",
+      "7.38 median hours of sleep per night\n",
+      "7.25 average hours of sleep per night\n",
+      "79.1 average sleep score\n",
+      "88.3 average sleep efficiency\n",
+      "46.9 average hr\n",
+      "13.9 average breaths per minute\n"
      ]
     }
    ],
@@ -341,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,23 +390,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83 days of tracked activity\n",
-      "91.8 average activity score per day\n",
-      "11,777.33 average daily movement (or equivalent to steps) per day\n",
-      "13,868.04 average of steps per day\n",
-      "2,840.42 average energy consumption during the day\n",
+      "19 days of tracked activity\n",
+      "79.0 average activity score per day\n",
+      "7,590.16 average daily movement (or equivalent to steps) per day\n",
+      "9,115.42 average of steps per day\n",
+      "2,617.37 average energy consumption during the day\n",
       "=================\n",
-      "0.4 average active hours (high)\n",
-      "0.8 average active hours(medium)\n",
-      "5.4 average active hours (low)\n",
-      "7.9 average rest hours\n",
-      "8.6 average inactive hours\n",
-      "0.7 average non_wear hours\n"
+      "0.1 average active hours (high)\n",
+      "0.6 average active hours(medium)\n",
+      "4.5 average active hours (low)\n",
+      "7.6 average rest hours\n",
+      "5.8 average inactive hours\n",
+      "4.5 average non_wear hours\n"
      ]
     }
    ],
    "source": [
-    "# Sleep Summary\n",
+    "# Activity Summary\n",
     "print('{:,} days of tracked activity'.format(len(activity)))\n",
     "print('{:,} average activity score per day'.format(round((activity.score).mean(),1)))\n",
     "print('{:,} average daily movement (or equivalent to steps) per day'.format(round((activity.daily_movement).mean(),2)))\n",
@@ -466,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
