Fixed error due to wrong variable name

--- a/habitica/habitica_downloader.ipynb
+++ b/habitica/habitica_downloader.ipynb
@@ -321,7 +321,7 @@
     "    \n",
     "    for h in i['history']:\n",
     "        habits_info = {\n",
-    "            'dailys_name':     dailys_name,\n",
+    "            'habits_name':     habits_name,\n",
     "            'scoredUp':        h['scoredUp'],\n",
     "            'scoredDown':       h['scoredDown'],\n",
     "            'history_date':    h['date'],\n",
